Refactor countdown logic in contagemReg.js for clarity; update condition to check for negative values and streamline console output. Add reiniciar button in sensor.html and fix variable declaration in sensor.js for proper functionality.

--- a/mod02Log/logProg/Slide/13Sensor/sensor.html
+++ b/mod02Log/logProg/Slide/13Sensor/sensor.html
@@ -14,6 +14,7 @@
             <div class="botoes">
                 <button id="iniciar" type="button" >Iniciar</button>
                 <button id="cancelar" type="button">Cancelar</button>
+                <button id="reiniciar" type="button">Reiniciar</button>
             </div>
         </form>
     </div>
